--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,4 +1,5 @@
 echo "--- CONFIG LOADED --- (use with +exec autoexec.cfg)"
+echo "My crosshair: is CSGO-SsuOV-i3sUr-a7V4J-WAihT-hEpEM"
 
 bind "kp_1" "echo "E: Practice mode enabled"; sv_cheats 1; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 10; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang;  give weapon_hegrenade;"
 
