Add bind for spectating

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -12,3 +12,5 @@ bind "kp_4" "echo "E: Rethtrow last granade"; sv_cheats 1; sv_rethrow_last_grena
 bind "kp_5" "echo "E: Enabled Voice Coms and Chat"; sv_cheats 1; tv_listen_voice_indices_h -1; tv_listen_voice_indices -1;tv_relaytextchat 2"
 
 bind "kp_6" "echo "E: Placing a bot"; sv_cheats 1; bot_place"
+
+bind "kp_8" "spec_player face_the_God; spec_player M4rtin"
