--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -15,4 +15,4 @@ bind "kp_6" "echo "E: Placing a bot"; sv_cheats 1; bot_place"
 
 bind "kp_0" "echo "E: self-spec"; spec_player face_the_God; spec_player M4rtin"
 
-bind "kp_8" "echo "E: bot unlimited hp"; sv_cheats 1; buddha 1"
+bind "kp_8" "echo "E: bot unlimited hp"; sv_cheats 1; toggle buddha"
