--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -13,6 +13,6 @@ bind "kp_5" "echo "E: Enabled Voice Coms and Chat"; sv_cheats 1; tv_listen_voice
 
 bind "kp_6" "echo "E: Placing a bot"; sv_cheats 1; bot_place"
 
-bind "kp_0" "echo "E: self-spec"; spec_player face_the_God; spec_player M4rtin"
+bind "kp_0" "echo "E: self-spec"; spec_player face_the_God; spec_player M4rtin;demoui;demoui"
 
 bind "kp_8" "echo "E: bot unlimited hp"; sv_cheats 1; toggle buddha"
