--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -18,5 +18,5 @@ bind "kp_0" "echo \"E: self-spec\"; spec_player face_the_God; spec_player M4rtin
 bind "kp_8" "echo \"E: bot unlimited hp\"; sv_cheats 1; toggle buddha"
 
 bind "uparrow" "echo \"E: Toggle Playback\"; demo_togglepause"
-bind "leftarrow" "echo \"E: Seek -5s\"; demo_goto -5"
-bind "rightarrow" "echo \"E: Seek +5s\"; demo_goto +5"
+bind "leftarrow" "echo \"E: Seek -5s\"; demo_gototick -270 relative"
+bind "rightarrow" "echo \"E: Seek +5s\"; demo_gototick -70 relative"
