--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,3 +1,11 @@
+echo "--- Applying automatic settings ---"
+
+cl_mute_enemy_team 1                  // Mute enemy messages in chat
+cl_allow_animated_avatars 0                  // Disable animated avatars (and other HTML MOTDs)
+cl_radar_scale 0.267496                    // Radar zoom level set to 0.27
+
+
+
 echo "--- CONFIG LOADED --- (use with +exec autoexec.cfg)"
 echo "My crosshair: is CSGO-SsuOV-i3sUr-a7V4J-WAihT-hEpEM"
 
