--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -3,7 +3,7 @@ echo "--- Applying automatic settings ---"
 cl_mute_enemy_team 1                  // Mute enemy messages in chat
 cl_allow_animated_avatars 0                  // Disable animated avatars (and other HTML MOTDs)
 cl_radar_scale 0.25                   // Radar zoom level set to 0.27
-
+r_fullscreen_gamma 1.5268
 
 
 echo "--- CONFIG LOADED --- (use with +exec autoexec.cfg)"
