--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -4,7 +4,11 @@ cl_mute_enemy_team 1                  // Mute enemy messages in chat
 cl_allow_animated_avatars 0                  // Disable animated avatars (and other HTML MOTDs)
 cl_radar_scale 0.25                   // Radar zoom level set to 0.27
 r_fullscreen_gamma 1.5268
-
+cl_hud_radar_scale 1.300000
+fps_max 72
+fps_max_menu 72
+cl_dm_buyrandomweapons 0
+sensitivity 1.250000
 
 echo "--- CONFIG LOADED --- (use with +exec autoexec.cfg)"
 echo "My crosshair: is CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ"
