--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -13,13 +13,13 @@ sensitivity 1.250000
 echo "--- CONFIG LOADED --- (use with +exec autoexec.cfg)"
 echo "My crosshair: is CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ"
 
-bind "kp_1" "echo \"E: Practice mode enabled\"; sv_cheats 1; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 10; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; mp_warmup_offline_enabled 1; mp_warmup_pausetimer 1 ; mp_warmup_start;"
+bind "kp_1" "echo \"E: Practice mode enabled\"; sv_cheats 1; sv_grenade_trajectory_prac_pipreview true; mp_warmup_pausetimer 1 ; mp_warmup_start; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 10; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade;"
 
 bind "kp_2" "echo \"E: Noclip toggled\"; sv_cheats 1; noclip"
 
 bind "kp_3" "echo \"E: Smoke killed\"; sv_cheats 1; ent_fire smokegrenade_projectile kill"
 
-bind "kp_4" "echo \"E: Rethrow last grenade\"; sv_cheats 1; sv_rethrow_last_grenade 1"
+bind "kp_4" "echo \"E: Rethrow last grenade\"; sv_cheats 1; sv_grenade_trajectory_prac_pipreview true; sv_rethrow_last_grenade 1"
 
 bind "kp_5" "echo \"E: Enabled Voice Coms and Chat\"; sv_cheats 1; tv_listen_voice_indices_h -1; tv_listen_voice_indices -1; tv_relaytextchat 2"
 
