--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -13,7 +13,7 @@ sensitivity 1.250000
 echo "--- CONFIG LOADED --- (use with +exec autoexec.cfg)"
 echo "My crosshair: is CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ"
 
-bind "kp_1" "echo \"E: Practice mode enabled\"; sv_cheats 1; mp_warmup_pausetimer 1 ; mp_warmup_start; sv_infinite_ammo 1; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 10; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; sv_grenade_trajectory_prac_pipreview true"
+bind "kp_1" "echo \"E: Practice mode enabled\"; sv_cheats 1; sv_infinite_ammo 1; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 10; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; sv_grenade_trajectory_prac_pipreview true"
 
 bind "kp_2" "echo \"E: Noclip toggled\"; sv_cheats 1; noclip"
 
@@ -24,6 +24,8 @@ bind "kp_4" "echo \"E: Rethrow last grenade\"; sv_cheats 1; sv_grenade_trajector
 bind "kp_5" "echo \"E: Enabled Voice Coms and Chat\"; sv_cheats 1; tv_listen_voice_indices_h -1; tv_listen_voice_indices -1; tv_relaytextchat 2"
 
 bind "kp_6" "echo \"E: Placing a bot\"; sv_cheats 1; bot_place"
+
+bind "kp_7" "echo \"E: start warmup\"; mp_warmup_pausetimer 1; mp_warmup_start"
 
 bind "kp_0" "echo \"E: self-spec\"; spec_player face_the_God; spec_player M4rtin; demoui; demoui"
 
