--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -25,7 +25,7 @@ bind "kp_5" "echo \"E: Enabled Voice Coms and Chat\"; sv_cheats 1; tv_listen_voi
 
 bind "kp_6" "echo \"E: Placing a bot\"; sv_cheats 1; bot_place"
 
-bind "kp_7" "echo \"E: start warmup\"; mp_warmup_pausetimer 1; mp_warmup_start"
+bind "kp_7" "echo \"E: start warmup\"; sv_cheats 1; mp_warmup_pausetimer 1; mp_warmup_start"
 
 bind "kp_0" "echo \"E: self-spec\"; spec_player face_the_God; spec_player M4rtin; demoui; demoui"
 
