--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -2,7 +2,7 @@ echo "--- Applying automatic settings ---"
 
 cl_mute_enemy_team 1                  // Mute enemy messages in chat
 cl_allow_animated_avatars 0                  // Disable animated avatars (and other HTML MOTDs)
-cl_radar_scale 0.25                   // Radar zoom level set to 0.27
+cl_radar_scale 0.3                   // Radar zoom level set to 0.27
 r_fullscreen_gamma 1.5268
 cl_hud_radar_scale 1.300000
 fps_max 72
@@ -10,8 +10,11 @@ fps_max_menu 72
 cl_dm_buyrandomweapons 0
 sensitivity 1.250000
 
+
 echo "--- CONFIG LOADED --- (use with +exec autoexec.cfg)"
 echo "My crosshair: is CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ"
+
+bind "F6" "toggle cl_chat_enabled"
 
 bind "kp_1" "echo \"E: Practice mode enabled\"; sv_cheats 1; sv_infinite_ammo 1; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 10; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; sv_grenade_trajectory_prac_pipreview true"
 
