--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -11,10 +11,15 @@ cl_dm_buyrandomweapons 0
 sensitivity 1.250000
 
 
+alias scoreon "+showscores; cl_mute_enemy_team 0; bind tab scoreoff"
+
+alias scoreoff "-showscores; cl_mute_enemy_team 1; bind tab scoreon"
+
+bind tab scoreon
+
+
 echo "--- CONFIG LOADED --- (use with +exec autoexec.cfg)"
 echo "My crosshair: is CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ"
-
-bind "F6" "toggle cl_mute_all_but_friends_and_party"
 
 bind "kp_1" "echo \"E: Practice mode enabled\"; sv_cheats 1; sv_infinite_ammo 1; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 10; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; sv_grenade_trajectory_prac_pipreview true"
 
