--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -9,7 +9,7 @@ fps_max 72
 fps_max_menu 72
 cl_dm_buyrandomweapons 0
 sensitivity 1.250000
-
+cl_mute_enemy_team 1
 
 alias scoreon "+showscores; cl_mute_enemy_team 0; bind tab scoreoff"
 
