--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,44 +1,53 @@
-echo "--- Applying automatic settings ---"
+// C:\Users\noisy\Desktop\counterStrike\cs-config\script.bat
+//  (use with +exec autoexec.cfg)"
+// start steam://run/730
 
-cl_mute_enemy_team 1                  // Mute enemy messages in chat
+// INPUT
+sensitivity 1.25
+
+// UI
+cl_mute_enemy_team 1
 cl_allow_animated_avatars 0                  // Disable animated avatars (and other HTML MOTDs)
 cl_radar_scale 0.3                   // Radar zoom level set to 0.27
+cl_hud_radar_scale 1.3
+// My crosshair: CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ
+
+// TAB
+alias +scoretab "+showscores; cl_mute_enemy_team 0"
+alias -scoretab "-showscores; cl_mute_enemy_team 1"
+bind "TAB" "+scoretab"
+
+
+// VIDEO SETTINGS
 r_fullscreen_gamma 1.5268
-cl_hud_radar_scale 1.300000
 fps_max 72
 fps_max_menu 72
 cl_dm_buyrandomweapons 0
-sensitivity 1.250000
-cl_mute_enemy_team 1
-
-alias scoreon "+showscores; cl_mute_enemy_team 0; bind tab scoreoff"
-
-alias scoreoff "-showscores; cl_mute_enemy_team 1; bind tab scoreon"
-
-bind tab scoreon
 
 
-echo "--- CONFIG LOADED --- (use with +exec autoexec.cfg)"
-echo "My crosshair: is CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ"
-
+// PRACTICE BINDS
 bind "kp_1" "echo \"E: Practice mode enabled\"; sv_cheats 1; sv_infinite_ammo 1; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 10; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; sv_grenade_trajectory_prac_pipreview true"
-
 bind "kp_2" "echo \"E: Noclip toggled\"; sv_cheats 1; noclip"
-
 bind "kp_3" "echo \"E: Smoke killed\"; sv_cheats 1; ent_fire smokegrenade_projectile kill"
-
 bind "kp_4" "echo \"E: Rethrow last grenade\"; sv_cheats 1; sv_grenade_trajectory_prac_pipreview true; sv_rethrow_last_grenade 1"
-
 bind "kp_5" "echo \"E: Enabled Voice Coms and Chat\"; sv_cheats 1; tv_listen_voice_indices_h -1; tv_listen_voice_indices -1; tv_relaytextchat 2"
-
 bind "kp_6" "echo \"E: Placing a bot\"; sv_cheats 1; bot_place"
-
 bind "kp_7" "echo \"E: start warmup\"; sv_cheats 1; mp_warmup_offline_enabled 1; mp_warmup_pausetimer 1; mp_warmup_start"
-
-bind "kp_0" "echo \"E: self-spec\"; spec_player face_the_God; spec_player M4rtin; demoui; demoui"
 
 bind "kp_8" "echo \"E: bot unlimited hp\"; sv_cheats 1; toggle buddha"
 
+// RADAR BINDS
+alias radar_zoom_small "cl_radar_scale 0.3; alias toggle_radar_zoom radar_zoom_big"
+alias radar_zoom_big "cl_radar_scale 1; alias toggle_radar_zoom radar_zoom_small"
+alias toggle_radar_zoom radar_zoom_big
+bind "kp_del" "toggle_radar_zoom"
+
+
+// DEMO BINDS
 bind "uparrow" "echo \"E: Toggle Playback\"; demo_togglepause"
 bind "leftarrow" "echo \"E: Seek -5s\"; demo_gototick -270 relative"
 bind "rightarrow" "echo \"E: Seek +5s\"; demo_gototick 270 relative"
+bind "kp_0" "echo \"E: self-spec\"; spec_player face_the_God; spec_player M4rtin; demoui; demoui"
+
+// USEFUL COMMANDS
+echo "Command to lock to player during demo: spec_lock_to_current_player"
