--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -6,6 +6,7 @@
 sensitivity 1.25
 
 // UI
+cl_hud_telemetry_frametime_show 2
 cl_mute_enemy_team 1
 cl_allow_animated_avatars 0                  // Disable animated avatars (and other HTML MOTDs)
 cl_radar_scale 0.3                   // Radar zoom level set to 0.27
@@ -26,6 +27,7 @@ cl_dm_buyrandomweapons 0
 
 
 // PRACTICE BINDS
+bind "`" "toggleconsole"
 bind "kp_1" "echo \"E: Practice mode enabled\"; sv_cheats 1; sv_infinite_ammo 1; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 10; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; sv_grenade_trajectory_prac_pipreview true"
 bind "kp_2" "echo \"E: Noclip toggled\"; sv_cheats 1; noclip"
 bind "kp_3" "echo \"E: Smoke killed\"; sv_cheats 1; ent_fire smokegrenade_projectile kill"
@@ -51,3 +53,12 @@ bind "kp_0" "echo \"E: self-spec\"; spec_player face_the_God; spec_player M4rtin
 
 // USEFUL COMMANDS
 echo "Command to lock to player during demo: spec_lock_to_current_player"
+
+// SOUND
+
+snd_menumusic_volume 0
+snd_mvp_volume 0
+snd_roundstart_volume 0
+snd_roundend_volume 0
+snd_tensecondwarning_volume 0.05
+snd_roundaction_volume 0
