--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -12,6 +12,7 @@ cl_allow_animated_avatars 0                  // Disable animated avatars (and ot
 cl_radar_scale 0.3                   // Radar zoom level set to 0.27
 cl_hud_radar_scale 1.3
 // My crosshair: CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ
+safezonex 0.8
 
 // TAB
 alias +scoretab "+showscores; cl_mute_enemy_team 0"
