Update safezonex value and rename fps_max_menu to fps_max_ui

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -12,7 +12,7 @@ cl_allow_animated_avatars 0                  // Disable animated avatars (and ot
 cl_radar_scale 0.3                   // Radar zoom level set to 0.27
 cl_hud_radar_scale 1.3
 // My crosshair: CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ
-safezonex 0.8
+safezonex 0.88
 
 // TAB
 alias +scoretab "+showscores; cl_mute_enemy_team 0"
@@ -23,7 +23,7 @@ bind "TAB" "+scoretab"
 // VIDEO SETTINGS
 r_fullscreen_gamma 1.5268
 fps_max 72
-fps_max_menu 72
+fps_max_ui 72
 cl_dm_buyrandomweapons 0
 
 
