--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -29,6 +29,7 @@ cl_dm_buyrandomweapons 0
 
 // PRACTICE BINDS
 bind "`" "toggleconsole"
+bind "kp_minus" "exec autoexec"
 bind "kp_1" "echo \"E: Practice mode enabled\"; sv_cheats 1; sv_infinite_ammo 1; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 10; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; sv_grenade_trajectory_prac_pipreview true"
 bind "kp_2" "echo \"E: Noclip toggled\"; sv_cheats 1; noclip"
 bind "kp_3" "echo \"E: Smoke killed\"; sv_cheats 1; ent_fire smokegrenade_projectile kill"
