--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -31,8 +31,10 @@ cl_dm_buyrandomweapons 0
 bind "`" "toggleconsole"
 bind "kp_minus" "exec autoexec"
 bind "kp_1" "echo \"E: Practice mode enabled\"; sv_cheats 1; sv_infinite_ammo 1; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 10; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; sv_grenade_trajectory_prac_pipreview true"
-bind "kp_2" "echo \"E: Noclip toggled\"; sv_cheats 1; noclip"
-bind "kp_3" "echo \"E: Smoke killed\"; sv_cheats 1; ent_fire smokegrenade_projectile kill"
+alias "+noclip_toggle" "sv_cheats 1; noclip"
+alias "-noclip_toggle" ""
+bind "mouse3" "+noclip_toggle"
+bind "kp_2" "echo \"E: Seek to tick 15s\"; demo_gototick +810 relative"
 bind "kp_4" "echo \"E: Rethrow last grenade\"; sv_cheats 1; sv_grenade_trajectory_prac_pipreview true; sv_rethrow_last_grenade 1"
 bind "kp_5" "echo \"E: Enabled Voice Coms and Chat\"; sv_cheats 1; tv_listen_voice_indices_h -1; tv_listen_voice_indices -1; tv_relaytextchat 2"
 bind "kp_6" "echo \"E: Placing a bot\"; sv_cheats 1; bot_place"
