Add weapon inspect toggle bind to apostrophe key

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -66,3 +66,6 @@ snd_roundstart_volume 0
 snd_roundend_volume 0
 snd_tensecondwarning_volume 0.05
 snd_roundaction_volume 0
+
+// Toggle weapon inspect with the apostrophe (') key
+bind "'" "+lookatweapon"
