Add weapon inspect toggle and bind Q key to crouch

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -69,3 +69,6 @@ snd_roundaction_volume 0
 
 // Toggle weapon inspect with the apostrophe (') key
 bind "'" "+lookatweapon"
+
+// Bind Q key to crouch
+bind "q" "+duck"
