Add key bindings for crouch, melee weapon, reload, and player ping

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -72,3 +72,12 @@ bind "'" "+lookatweapon"
 
 // Bind Q key to crouch
 bind "q" "+duck"
+
+// Bind V key to equip melee weapon
+bind "v" "slot3"
+
+// Bind G key to reload
+bind "g" "+reload"
+
+// Bind F key to player ping
+bind "f" "player_ping"
