Update key bindings for grenade and weapon equips

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -83,4 +83,16 @@ bind "g" "+reload"
 bind "f" "player_ping"
 
 // Bind 4 key to equip Zeus
-bind "4" "slot11"
+bind "6" "slot11"
+
+// Bind Shift key to equip flashbang
+bind "SHIFT" "slot7"
+
+// Bind X key to equip molotov
+bind "x" "slot10"
+
+// Bind 4 key to equip smoke grenade
+bind "4" "slot8"
+
+// Bind R key to equip HE grenade
+bind "r" "slot6"
