Add key bindings for dropping weapon, using microphone, and healshot

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -96,3 +96,12 @@ bind "4" "slot8"
 
 // Bind R key to equip HE grenade
 bind "r" "slot6"
+
+// Bind H key to drop weapon
+bind "h" "drop"
+
+// Bind Mouse 4 to use microphone
+bind "mouse4" "+voicerecord"
+
+// Bind Left Ctrl to healshot
+bind "ctrl" "slot12"
