Add key binding for decoy grenade and bind Left Ctrl to healshot

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -105,3 +105,6 @@ bind "mouse4" "+voicerecord"
 
 // Bind Left Ctrl to healshot
 bind "ctrl" "slot12"
+
+// Bind T key to equip decoy grenade
+bind "t" "slot9"
