Add key bindings for equipping primary and secondary weapons

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -108,3 +108,9 @@ bind "ctrl" "slot12"
 
 // Bind T key to equip decoy grenade
 bind "t" "slot9"
+
+// Bind 1 key to equip primary weapon
+bind "1" "slot1"
+
+// Bind 3 key to equip secondary weapon
+bind "3" "slot2"
