Add key binding for toggling radar zoom with 'j' and echo list of bound keys

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -47,7 +47,7 @@ alias radar_zoom_small "cl_radar_scale 0.3; alias toggle_radar_zoom radar_zoom_b
 alias radar_zoom_big "cl_radar_scale 1; alias toggle_radar_zoom radar_zoom_small"
 alias toggle_radar_zoom radar_zoom_big
 bind "kp_del" "toggle_radar_zoom"
-
+bind "j" "toggle_radar_zoom"
 
 // DEMO BINDS
 bind "uparrow" "echo \"E: Toggle Playback\"; demo_togglepause"
@@ -57,6 +57,7 @@ bind "kp_0" "echo \"E: self-spec\"; spec_player face_the_God; spec_player M4rtin
 
 // USEFUL COMMANDS
 echo "Command to lock to player during demo: spec_lock_to_current_player"
+echo "List binds: key_listboundkeys"
 
 // SOUND
 
