Update key bindings for Shift and Mouse 5 to improve equipment handling

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -86,8 +86,11 @@ bind "f" "player_ping"
 // Bind 4 key to equip Zeus
 bind "6" "slot11"
 
-// Bind Shift key to equip flashbang
-bind "SHIFT" "slot7"
+// Bind Shift key to walk
+bind "SHIFT" "+sprint"
+
+// Bind Mouse 5 to equip flashbang
+bind "mouse5" "slot7"
 
 // Bind X key to equip molotov
 bind "x" "slot10"
