Refactor key bindings for sprint, jump, and healing; update comments for clarity

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,3 +1,5 @@
+// Bind C key to +sprint
+bind "c" "+sprint"
 // C:\Users\noisy\Desktop\counterStrike\cs-config\script.bat
 //  (use with +exec autoexec.cfg)"
 // start steam://run/730
@@ -6,13 +8,19 @@
 sensitivity 1.25
 
 // UI
-cl_hud_telemetry_frametime_show 2
 cl_mute_enemy_team 1
 cl_allow_animated_avatars 0                  // Disable animated avatars (and other HTML MOTDs)
 cl_radar_scale 0.3                   // Radar zoom level set to 0.27
 cl_hud_radar_scale 1.3
 // My crosshair: CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ
-safezonex 0.88
+safezonex 1
+viewmodel_fov 68; viewmodel_offset_x 2.5; viewmodel_offset_y 0; viewmodel_offset_z -1.5; viewmodel_presetpos 2;
+
+
+cl_hud_telemetry_frametime_show 0
+cl_hud_telemetry_ping_show 2
+cl_hud_telemetry_net_misdelivery_show 2
+cl_hud_telemetry_net_detailed 2
 
 // TAB
 alias +scoretab "+showscores; cl_mute_enemy_team 0"
@@ -74,7 +82,7 @@ bind "'" "+lookatweapon"
 // Bind Q key to crouch
 bind "q" "+duck"
 
-// Bind V key to equip melee weapon
+// Bind V key to equip knife
 bind "v" "slot3"
 
 // Bind G key to reload
@@ -86,11 +94,23 @@ bind "f" "player_ping"
 // Bind 4 key to equip Zeus
 bind "6" "slot11"
 
-// Bind Shift key to walk
-bind "SHIFT" "+sprint"
 
-// Bind Mouse 5 to equip flashbang
-bind "mouse5" "slot7"
+
+// Bind Spacebar to +sprint
+bind "SPACE" "+jump"
+
+// Bind Left Ctrl to jump
+bind "ctrl" "+jump"
+
+// Bind Keypad Plus to healshot
+bind "kp_plus" "slot12"
+
+// Bind Shift to flashbang
+bind "SHIFT" "slot7"
+
+
+// Bind Mouse 5 to +sprint
+bind "mouse5" "+sprint"
 
 // Bind X key to equip molotov
 bind "x" "slot10"
@@ -106,9 +126,6 @@ bind "h" "drop"
 
 // Bind Mouse 4 to use microphone
 bind "mouse4" "+voicerecord"
-
-// Bind Left Ctrl to healshot
-bind "ctrl" "slot12"
 
 // Bind T key to equip decoy grenade
 bind "t" "slot9"
