Update key bindings in autoexec.cfg and add visualization script for key bindings in main.py

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,11 +1,20 @@
-// Bind C key to +sprint
-bind "c" "+sprint"
-// C:\Users\noisy\Desktop\counterStrike\cs-config\script.bat
-//  (use with +exec autoexec.cfg)"
+bind "n" "switchhands"
+bind "b" "buymenu"
+bind "e" "+use"
+// Bind WSAD to standard movement controls
+bind "w" "+forward"
+bind "a" "+left"
+bind "s" "+back"
+bind "d" "+right"
+
+
+
+//  (use with +exec autoexec.cfg -freq 75)"
 // start steam://run/730
 
 // INPUT
 sensitivity 1.25
+volume 0.725
 
 // UI
 cl_mute_enemy_team 1
@@ -115,11 +124,20 @@ bind "mouse5" "+sprint"
 // Bind X key to equip molotov
 bind "x" "slot10"
 
+// Bind C key to radio message
+bind "c" "radio"
+
+// Bind Z key to last weapon
+bind "z" "+duck"
+
 // Bind 4 key to equip smoke grenade
 bind "4" "slot8"
 
 // Bind R key to equip HE grenade
 bind "r" "slot6"
+
+// Bind 5 key to equip bomb
+bind "5" "slot5"
 
 // Bind H key to drop weapon
 bind "h" "drop"
