Add custom alias for greeting and adjust death notices setting

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -7,7 +7,7 @@ bind "a" "+left"
 bind "s" "+back"
 bind "d" "+right"
 
-
+cl_draw_only_deathnotices 0
 
 //  (use with +exec autoexec.cfg -freq 75)"
 // start steam://run/730
@@ -75,6 +75,9 @@ bind "kp_0" "echo \"E: self-spec\"; spec_player face_the_God; spec_player M4rtin
 // USEFUL COMMANDS
 echo "Command to lock to player during demo: spec_lock_to_current_player"
 echo "List binds: key_listboundkeys"
+
+// Custom Aliases
+alias hello "say hello"
 
 // SOUND
 
