--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -104,15 +104,13 @@ bind "g" "+reload"
 bind "f" "player_ping"
 
 // Bind 4 key to equip Zeus
-bind "6" "slot11"
+bind "ctrl" "slot11"
 
 
 
 // Bind Spacebar to +sprint
 bind "SPACE" "+jump"
 
-// Bind Left Ctrl to jump
-bind "ctrl" "+jump"
 
 // Bind Keypad Plus to healshot
 bind "kp_plus" "slot12"
