feat(config): Update key bindings

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -119,14 +119,12 @@ bind "kp_plus" "slot12"
 bind "SHIFT" "slot7"
 
 
-// Bind Mouse 5 to +sprint
-bind "mouse5" "+sprint"
 
 // Bind X key to equip molotov
-bind "x" "slot10"
+bind "c" "slot10"
 
 // Bind C key to radio message
-bind "c" "radio"
+bind "x" "+sprint"
 
 // Bind Z key to last weapon
 bind "z" "+duck"
