add spec toggle

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -51,13 +51,17 @@ bind "kp_1" "echo \"E: Practice mode enabled\"; sv_cheats 1; sv_infinite_ammo 1;
 alias "+noclip_toggle" "sv_cheats 1; noclip"
 alias "-noclip_toggle" ""
 bind "mouse3" "+noclip_toggle"
-bind "kp_2" "echo \"E: Seek to tick 15s\"; demo_gototick +810 relative"
+bind "kp_2" "echo "E: Seek to tick 15s"; demo_gototick +810 relative"
 bind "kp_4" "echo \"E: Rethrow last grenade\"; sv_cheats 1; sv_grenade_trajectory_prac_pipreview true; sv_rethrow_last_grenade 1"
 bind "kp_5" "echo \"E: Enabled Voice Coms and Chat\"; sv_cheats 1; tv_listen_voice_indices_h -1; tv_listen_voice_indices -1; tv_relaytextchat 2"
 bind "kp_6" "echo \"E: Placing a bot\"; sv_cheats 1; bot_place"
 bind "kp_7" "echo \"E: start warmup\"; sv_cheats 1; mp_warmup_offline_enabled 1; mp_warmup_pausetimer 1; mp_warmup_start"
 
-bind "kp_8" "echo \"E: bot unlimited hp\"; sv_cheats 1; toggle buddha"
+alias "spectoggle_on" "spec_lock_to_current_player ; alias spectoggle spectoggle_off"
+alias "spectoggle_off" "spec_lock_to_accountid 333; alias spectoggle spectoggle_on"
+alias "spectoggle" "spectoggle_on"
+bind "kp_8" "spectoggle"
+
 
 // RADAR BINDS
 alias radar_zoom_small "cl_radar_scale 0.3; alias toggle_radar_zoom radar_zoom_big"
