--- a/src/autoexec.cfg
+++ b/src/autoexec.cfg
@@ -1,49 +1,53 @@
-bind "n" "switchhands"
-bind "b" "buymenu"
-bind "e" "+use"
-// Bind WSAD to standard movement controls
-bind "w" "+forward"
-bind "a" "+left"
-bind "s" "+back"
-bind "d" "+right"
-
-cl_draw_only_deathnotices 0
-
-//  (use with +exec autoexec.cfg -freq 75)"
 // start steam://run/730
-
-// INPUT
-sensitivity 1.25
-volume 0.725
+// My crosshair: CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ
 
 // UI
 cl_mute_enemy_team 1
 cl_allow_animated_avatars 0                  // Disable animated avatars (and other HTML MOTDs)
 cl_radar_scale 0.3                   // Radar zoom level set to 0.27
-cl_hud_radar_scale 1.3
-// My crosshair: CSGO-G47vn-rPzcc-6SJQo-mtwVD-ZGuSJ
+cl_draw_only_deathnotices 0
+cl_hud_radar_scale 1.3 // SET BIGRADAR
 safezonex 1
 viewmodel_fov 68; viewmodel_offset_x 2.5; viewmodel_offset_y 0; viewmodel_offset_z -1.5; viewmodel_presetpos 2;
-
-
-cl_hud_telemetry_frametime_show 0
+cl_hud_telemetry_frametime_show 2
 cl_hud_telemetry_ping_show 2
 cl_hud_telemetry_net_misdelivery_show 2
 cl_hud_telemetry_net_detailed 2
 
+// VIDEO SETTINGS
+r_fullscreen_gamma 2.21
+fps_max 0
+fps_max_ui 0
+
+// ---------------------
+// GAMEPLAY SETTINGS
+cl_dm_buyrandomweapons 0
+
+
+// ---------------------
+// SOUND
+volume 0.725
+snd_menumusic_volume 0
+snd_mvp_volume 0
+snd_roundstart_volume 0
+snd_roundend_volume 0
+snd_tensecondwarning_volume 0.05
+snd_roundaction_volume 0
+
+// ---------------------
+// Controls:
+sensitivity 1.25
+bind "n" "switchhands"
+bind "b" "buymenu"
+bind "e" "+use"
+bind "w" "+forward"
+bind "a" "+left"
+bind "s" "+back"
+bind "d" "+right"
 // TAB
 alias +scoretab "+showscores; cl_mute_enemy_team 0"
 alias -scoretab "-showscores; cl_mute_enemy_team 1"
 bind "TAB" "+scoretab"
-
-
-// VIDEO SETTINGS
-r_fullscreen_gamma 1.5268
-fps_max 300
-fps_max_ui 300
-cl_dm_buyrandomweapons 0
-
-
 // PRACTICE BINDS
 bind "`" "toggleconsole"
 bind "kp_minus" "exec autoexec"
@@ -56,103 +60,67 @@ bind "kp_4" "echo \"E: Rethrow last grenade\"; sv_cheats 1; sv_grenade_trajector
 bind "kp_5" "echo \"E: Enabled Voice Coms and Chat\"; sv_cheats 1; tv_listen_voice_indices_h -1; tv_listen_voice_indices -1; tv_relaytextchat 2"
 bind "kp_6" "echo \"E: Placing a bot\"; sv_cheats 1; bot_place"
 bind "kp_7" "echo \"E: start warmup\"; sv_cheats 1; ff_damage_reduction_grenade_self 1; mp_warmup_offline_enabled 1; mp_warmup_pausetimer 1; mp_warmup_start"
-
+// SPECTATOR BINDS
 alias "spectoggle_on" "spec_lock_to_current_player ; alias spectoggle spectoggle_off"
 alias "spectoggle_off" "spec_lock_to_accountid 333; alias spectoggle spectoggle_on"
 alias "spectoggle" "spectoggle_on"
 bind "kp_8" "spectoggle"
-
-
 // RADAR BINDS
 alias radar_zoom_small "cl_radar_scale 0.3; alias toggle_radar_zoom radar_zoom_big"
 alias radar_zoom_big "cl_radar_scale 1; alias toggle_radar_zoom radar_zoom_small"
 alias toggle_radar_zoom radar_zoom_big
 bind "kp_del" "toggle_radar_zoom"
 bind "j" "toggle_radar_zoom"
-
+// Inspect weapons with apostrophe (') 
+bind "'" "+lookatweapon"
+// Crouch
+bind "q" "+duck"
+// Knife
+bind "v" "slot3"
+// Reload
+bind "r" "+reload"
+// Player ping
+bind "f" "player_ping"
+// Zeus
+bind "ctrl" "slot11"
+// Jump
+bind "SPACE" "+jump"
+// Deathmatch Healshot
+bind "kp_plus" "slot12"
+// Bind Shift to flashbang
+bind "SHIFT" "slot7"
+// Molotov
+bind "c" "slot10"
+// Sprint
+bind "x" "+sprint"
+// Crouch
+bind "z" "+duck"
+// Bind 4 key to equip smoke grenade
+bind "4" "slot8"
+// HE grenade
+bind "g" "slot6"
+// Bomb
+bind "5" "slot5"
+// Drop weapon
+bind "h" "drop"
+// Push to talk microphone
+bind "mouse4" "+voicerecord"
+// Decoy grenade
+bind "t" "slot9"
+// Primary weapon
+bind "1" "slot1"
+// Secondary weapon
+bind "3" "slot2"
 // DEMO BINDS
 bind "uparrow" "echo \"E: Toggle Playback\"; demo_togglepause"
 bind "leftarrow" "echo \"E: Seek -5s\"; demo_gototick -270 relative"
 bind "rightarrow" "echo \"E: Seek +5s\"; demo_gototick 270 relative"
 bind "kp_0" "echo \"E: self-spec\"; spec_player face_the_God; spec_player M4rtin; demoui; demoui"
 
+// ---------------------
 // USEFUL COMMANDS
 echo "Command to lock to player during demo: spec_lock_to_current_player"
 echo "List binds: key_listboundkeys"
 
 // Custom Aliases
-alias hello "say hello"
-
-// SOUND
-
-snd_menumusic_volume 0
-snd_mvp_volume 0
-snd_roundstart_volume 0
-snd_roundend_volume 0
-snd_tensecondwarning_volume 0.05
-snd_roundaction_volume 0
-
-// Toggle weapon inspect with the apostrophe (') key
-bind "'" "+lookatweapon"
-
-// Bind Q key to crouch
-bind "q" "+duck"
-
-// Bind V key to equip knife
-bind "v" "slot3"
-
-// Bind G key to reload
-bind "g" "+reload"
-
-// Bind F key to player ping
-bind "f" "player_ping"
-
-// Bind 4 key to equip Zeus
-bind "ctrl" "slot11"
-
-
-
-// Bind Spacebar to +sprint
-bind "SPACE" "+jump"
-
-
-// Bind Keypad Plus to healshot
-bind "kp_plus" "slot12"
-
-// Bind Shift to flashbang
-bind "SHIFT" "slot7"
-
-
-
-// Bind X key to equip molotov
-bind "c" "slot10"
-
-// Bind C key to radio message
-bind "x" "+sprint"
-
-// Bind Z key to last weapon
-bind "z" "+duck"
-
-// Bind 4 key to equip smoke grenade
-bind "4" "slot8"
-
-// Bind R key to equip HE grenade
-bind "r" "slot6"
-
-// Bind 5 key to equip bomb
-bind "5" "slot5"
-
-// Bind H key to drop weapon
-bind "h" "drop"
-
-// Bind Mouse 4 to use microphone
-bind "mouse4" "+voicerecord"
-
-// Bind T key to equip decoy grenade
-bind "t" "slot9"
-
-// Bind 1 key to equip primary weapon
-bind "1" "slot1"
-
-// Bind 3 key to equip secondary weapon
-bind "3" "slot2"
+alias demoalias "say it's demo alias!"
