--- a/src/autoexec.cfg
+++ b/src/autoexec.cfg
@@ -55,9 +55,9 @@ alias "+noclip_toggle" "sv_cheats 1; noclip"
 alias "-noclip_toggle" ""
 bind "mouse3" "+noclip_toggle"
 bind "kp_2" "echo "E: Seek to tick 15s"; demo_gototick +810 relative"
-bind "kp_4" "echo "E: Rethrow last grenade"; sv_cheats 1; sv_grenade_trajectory_prac_pipreview true; sv_rethrow_last_grenade 1"
+bind "END" "echo "E: Rethrow last grenade"; sv_cheats 1; sv_grenade_trajectory_prac_pipreview true; sv_rethrow_last_grenade 1"
 bind "kp_5" "echo "E: Enabled Voice Coms and Chat"; sv_cheats 1; tv_listen_voice_indices_h -1; tv_listen_voice_indices -1; tv_relaytextchat 2"
-bind "kp_6" "echo "E: Placing a bot"; sv_cheats 1; bot_place"
+bind "del" "echo "E: Placing a bot"; sv_cheats 1; bot_place"
 bind "ins" "echo "E: start warmup"; sv_cheats 1; ff_damage_reduction_grenade_self 1; mp_warmup_offline_enabled 1; mp_warmup_pausetimer 1; mp_warmup_start; sv_infinite_ammo 2; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 6; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; sv_grenade_trajectory_prac_pipreview true"
 // SPECTATOR BINDS
 alias "spectoggle_on" "spec_lock_to_current_player ; alias spectoggle spectoggle_off"
