--- a/src/autoexec.cfg
+++ b/src/autoexec.cfg
@@ -35,6 +35,7 @@ snd_tensecondwarning_volume 0.05
 snd_roundaction_volume 0
 
 // ---------------------
+
 // Controls:
 sensitivity 1.25
 bind "n" "switchhands"
@@ -48,22 +49,22 @@ bind "d" "+right"
 alias +scoretab "+showscores; cl_mute_enemy_team 0"
 alias -scoretab "-showscores; cl_mute_enemy_team 1"
 bind "TAB" "+scoretab"
+
 // PRACTICE BINDS
 bind "`" "toggleconsole"
-bind "kp_minus" "exec autoexec"
 alias "+noclip_toggle" "sv_cheats 1; noclip"
 alias "-noclip_toggle" ""
 bind "mouse3" "+noclip_toggle"
-bind "kp_2" "echo "E: Seek to tick 15s"; demo_gototick +810 relative"
 bind "END" "echo "E: Rethrow last grenade"; sv_cheats 1; sv_grenade_trajectory_prac_pipreview true; sv_rethrow_last_grenade 1"
-bind "kp_5" "echo "E: Enabled Voice Coms and Chat"; sv_cheats 1; tv_listen_voice_indices_h -1; tv_listen_voice_indices -1; tv_relaytextchat 2"
 bind "del" "echo "E: Placing a bot"; sv_cheats 1; bot_place"
 bind "ins" "echo "E: start warmup"; sv_cheats 1; ff_damage_reduction_grenade_self 1; mp_warmup_offline_enabled 1; mp_warmup_pausetimer 1; mp_warmup_start; sv_infinite_ammo 2; bot_quota_mode fill; bot_quota 10; bot_stop 1; ammo_grenade_limit_total 6; sv_showimpacts 1; mp_free_armor 2; mp_friendlyfire 1; mp_teammates_are_enemies 1; mp_buy_anywhere 1; give weapon_ak47; give weapon_molotov; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; sv_grenade_trajectory_prac_pipreview true"
+
 // SPECTATOR BINDS
 alias "spectoggle_on" "spec_lock_to_current_player ; alias spectoggle spectoggle_off"
 alias "spectoggle_off" "spec_lock_to_accountid 333; alias spectoggle spectoggle_on"
 alias "spectoggle" "spectoggle_on"
 bind "kp_8" "spectoggle"
+
 // RADAR BINDS
 alias radar_zoom_small "cl_radar_scale 0.3; alias toggle_radar_zoom radar_zoom_big"
 alias radar_zoom_big "cl_radar_scale 1; alias toggle_radar_zoom radar_zoom_small"
@@ -110,6 +111,7 @@ bind "t" "slot9"
 bind "1" "slot1"
 // Secondary weapon
 bind "3" "slot2"
+
 // DEMO BINDS
 bind "uparrow" "echo "E: Toggle Playback"; demo_togglepause"
 bind "leftarrow" "echo "E: Seek -5s"; demo_gototick -270 relative"
@@ -124,3 +126,5 @@ echo "List binds: key_listboundkeys"
 // Custom Aliases
 alias demoalias "say it's demo alias!"
 bind "PGDN" "echo E : Smoke killed; sv_cheats 1; ent_fire smokegrenade_projectile kill"
+
+// exec autoexec
