--- a/src/autoexec.cfg
+++ b/src/autoexec.cfg
@@ -25,6 +25,7 @@ cl_dm_buyrandomweapons 0
 
 
 // ---------------------
+
 // SOUND
 volume 0.85
 snd_menumusic_volume 0
@@ -54,6 +55,7 @@ bind "TAB" "+scoretab"
 bind "`" "toggleconsole"
 alias "+noclip_toggle" "sv_cheats 1; noclip"
 alias "-noclip_toggle" ""
+bind "home" "toggle volume 0 0.85"
 bind "mouse3" "+noclip_toggle"
 bind "END" "echo "E: Rethrow last grenade"; sv_cheats 1; sv_grenade_trajectory_prac_pipreview true; sv_rethrow_last_grenade 1"
 bind "del" "echo "E: Placing a bot"; sv_cheats 1; bot_place"
@@ -69,6 +71,8 @@ bind "kp_8" "spectoggle"
 alias radar_zoom_small "cl_radar_scale 0.3; alias toggle_radar_zoom radar_zoom_big"
 alias radar_zoom_big "cl_radar_scale 1; alias toggle_radar_zoom radar_zoom_small"
 alias toggle_radar_zoom radar_zoom_big
+
+// BINDS
 bind "kp_del" "toggle_radar_zoom"
 bind "j" "toggle_radar_zoom"
 // Inspect weapons with apostrophe (') 
