--- a/src/autoexec.cfg
+++ b/src/autoexec.cfg
@@ -86,7 +86,7 @@ bind "r" "+reload"
 // Player ping
 bind "f" "player_ping"
 // Zeus
-bind "ctrl" "slot11"
+bind "ctrl" "+duck"
 // Jump
 bind "SPACE" "+jump"
 // Deathmatch Healshot
